--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,13 +8,13 @@ layout: default
     {{ content }}
   </div>
   <div class="col-md-6">
-    <img src="{{ site.github.url }}/assets/img/home.jpg" alt="Home" width="100%">
+    <img src="{{ site.github.url }}/assets/img/lucyliu_photo_2021.jpg" alt="Home" width="100%">
   </div>
 </div>
 
-<!-- {% include publications.html %}
+{% include publications.html %}
 
-<div class="row g-5 mb-5">
+<!-- <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold border-bottom pb-3 mb-5">Updates</h3>
     {% for post in site.posts %}
