--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -3,20 +3,28 @@
     <h3 class="fw-bold border-bottom pb-3 mb-5">Research</h3>
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-        <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+        <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
-            <!-- <img src="images/adhoc.png" alt="hpp" style="border-style: none" width="200"> -->
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif" width="100"/>
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif" width="100"/> 
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="200"/>
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="200"/> 
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <p>Liu, L., Choi, G., & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.</p>
+            [
+            <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
+            <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <!-- <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="200"/>
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="200"/>  -->
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <p>Liu, L., Choi, G., & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
             [
             <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
-            <!-- <a href="https://www.youtube.com/watch?v=Fd4RcVaNthY">Video</a> / -->
-            <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
-            <!-- <b><p style="color:red">Won best paper award at NeurIPS 2020 Cooperative AI Workshop!</p></b> -->
-            <!-- <p>We develop Bayesian Delegation, a decentralized multi-agent learning mechanism that enables agents to rapidly infer the sub-tasks of others by inverse planning. We demonstrate that our model is a capable ad-hoc collaborator, scales with team size and makes inferences about intent similar to human observers.</p> -->
           </td>
         </tr>
 
