--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -4,11 +4,23 @@
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
         <tr>
-          <td style="padding:20px;width:25%;vertical-align:middle">
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="200"/>
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="200"/> 
+          <td style="padding:20px;width:40%;vertical-align:middle">
+            <img src = "assets/img/animation_17_v3.gif" width="200"/>
           </td>
-          <td style="padding:20px;width:75%;vertical-align:middle">
+          <td style="padding:20px;width:60%;vertical-align:middle">
+            <p>Liu, L., Choi, G., & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
+            [
+            <a href="https://arxiv.org/abs/2104.13399">Paper</a>
+            ]
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:40%;vertical-align:middle">
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="100"/>
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="100"/> 
+          </td>
+          <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L., Choi, G., & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.</p>
             [
             <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
@@ -16,17 +28,6 @@
           </td>
         </tr>
 
-        <tr>
-          <td style="padding:20px;width:25%;vertical-align:middle">
-            <!-- <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="200"/>
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="200"/>  -->
-          </td>
-          <td style="padding:20px;width:75%;vertical-align:middle">
-            <p>Liu, L., Choi, G., & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
-            [
-            <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
-          </td>
-        </tr>
 
         <!-- <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
           <td style="padding:20px;width:25%;vertical-align:middle">
@@ -67,6 +68,11 @@
   </tr>
   </table>
   </div>
+</div>
+
+
+<div class="row g-5 mb-5">
+  Site Template by <a href="https://github.com/LeNPaul/academic">Paul Le</a>.
 </div>
 
 
