--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,7 +5,7 @@
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "assets/img/animation_17_v3.gif" width="200"/>
+            <img src = "assets/img/animation_17_v3.gif" width="400"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L., Choi, G., & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
@@ -17,14 +17,26 @@
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="100"/>
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="100"/> 
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="200"/>
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="200"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L., Choi, G., & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.</p>
             [
             <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
             <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:40%;vertical-align:middle">
+            <img src = "https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf" width="400"/>
+          </td>
+          <td style="padding:20px;width:60%;vertical-align:middle">
+            <p>Finkelstein, M., Liu, L., Levy Schlot, N., Kolumbus, Y., Parkes, D., Rosenschein, J., Keren, S. Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning. (To appear in December 2021.)</p>
+            [
+            <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a> /
+            ]
           </td>
         </tr>
 
@@ -71,8 +83,8 @@
 </div>
 
 
-<div class="row g-5 mb-5">
-  Site Template by <a href="https://github.com/LeNPaul/academic">Paul Le</a>.
+<div>
+  <a href="https://github.com/LeNPaul/academic">Site template by Paul Le.</a>
 </div>
 
 
