--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,7 +5,7 @@
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "assets/img/animation_17_v3.gif" width="400"/>
+            <img src = "assets/img/animation_17_v3.gif" width="300"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L., Choi, G., & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
@@ -17,62 +17,29 @@
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="200"/>
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="200"/> 
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="150"/>
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L., Choi, G., & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.</p>
             [
-            <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
+            <a href="https://arxiv.org/abs/2104.13399">Paper</a> |
             <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
           </td>
         </tr>
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf" width="400"/>
+            <img src = "https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf" width="300"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Finkelstein, M., Liu, L., Levy Schlot, N., Kolumbus, Y., Parkes, D., Rosenschein, J., Keren, S. Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning. (To appear in December 2021.)</p>
+            <p>Finkelstein, M., Liu, L., Levy Schlot, N., Kolumbus, Y., Parkes, D., Rosenschein, J., Keren, S. <br>
+               Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning. (To appear in December 2021.)</p>
             [
-            <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a> /
+            <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
             ]
           </td>
         </tr>
-
-
-        <!-- <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
-          <td style="padding:20px;width:25%;vertical-align:middle">
-            <img src="images/hpp.png" alt="hpp" style="border-style: none" width="200">
-          </td>
-          <td style="padding:20px;width:75%;vertical-align:middle">
-            <a href="https://arxiv.org/abs/2003.06906">
-              <papertitle>Model-based Reinforcement Learning for Multiagent Goal Alignment</papertitle>
-            </a>
-            <br>
-            <strong>Rose E. Wang</strong>,
-            <a href="https://research.google/people/JChaseKew/">J.Chase Kew</a>,
-            <a href="https://scholar.google.com/citations?user=vOLXDDAAAAAJ&hl=en">Dennis Lee</a>,
-            <a href="https://deepai.org/profile/tsang-wei-edward-lee">Tsang-Wei Edward Lee</a>,
-            <a href="https://research.google/people/TingnanZhang/">Tingnan Zhang</a>,
-            <a href="http://brianichter.com/">Brian Ichter</a>,
-            <a href="http://www.jie-tan.net/">Jie Tan</a>,
-            <a href="https://www.afaust.info/">Aleksandra Faust</a>
-            <br>
-            <em>Conference on Robot Learning (CoRL) 2020</em>.<br>
-            <em>Mentioned in <a href="https://ai.googleblog.com/2021/01/google-research-looking-back-at-2020.html">Google AI Year in Review, 2020</a>.</em><br> 
-            <br>
-              [
-            <a href="https://arxiv.org/abs/2003.06906">Paper</a> /
-            <a href="https://www.youtube.com/watch?v=-LqgfksqNH8&feature=youtu.be">Video</a> /
-            <a href="https://sites.google.com/view/multiagent-hpp">Project Page</a> / 
-            <a href="https://ai.googleblog.com/2021/04/model-based-rl-for-decentralized-multi.html">Blog post</a>
-            ]
-            <br>
-            <p></p>
-            <p>In this work, we present hierarchical predictive planning (HPP) for decentralized multiagent navigation tasks. Our approach is trained in simulation and works in unseen settings both in simulation and in the real world (zero shot transfer)!</p>
-          </td>
-        </tr> -->
 
       </tbody></table>
 
