--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -24,7 +24,7 @@
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L., Choi, G., & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.</p>
             [
-            <a href="https://arxiv.org/abs/2104.13399">Paper</a> |
+            <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
             <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
           </td>
         </tr>
