--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,24 +5,37 @@
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
+            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="150"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="150"/> 
+          </td>
+          <td style="padding:20px;width:60%;vertical-align:middle">
+            <p>Kopparapu, K.*, Lin, E.*, & Liu, L.* Adversarial Environment Generation.</p>
+            [
+            <a href="https://kavyakvk.github.io/adversarial-environment-generation/">Overview</a> /
+            <a href="https://github.com/kavyakvk/adversarial-environment-generation/blob/main/Adversarial%20Environment%20Generation%20for%20Multi-Agent%20Evaluation.pdf">Paper</a> /
+            <a href="https://github.com/kavyakvk/adversarial-environment-generation">Code</a> ]
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:40%;vertical-align:middle">
             <img src = "https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf" width="300"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Finkelstein, M., Liu, L., Levy Schlot, N., Kolumbus, Y., Parkes, D., Rosenschein, J., Keren, S. <br>
-               Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning. (To appear in December 2021.)</p>
+            <p>Finkelstein, M., Keren, S., Levy Schlot, N., Liu, L., Kolumbus, Y., Rosenschein, J., Parkes, D. <br>
+               Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning, December 2021.</p>
             [
-            <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
+            <!-- <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a> -->
+            <a href="{{ site.github.url }}/assets/img/rlpe.png">Poster</a>
             ]
           </td>
         </tr>
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="150"/>
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="150"/><img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Liu, L., Choi, G., & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.</p>
+            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.</p>
             [
             <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
             <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
@@ -31,10 +44,10 @@
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "assets/img/animation_17_v3.gif" width="300"/>
+            <img src = "{{ site.github.url }}/assets/img/animation_17_v3.gif" width="300"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Liu, L., Choi, G., & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
+            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
             [
             <a href="https://arxiv.org/abs/2104.13399">Paper</a>
             ]
