--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,10 +5,11 @@
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="150"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="150"/> 
+            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="100"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="100"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Kopparapu, K.*, Lin, E.*, & Liu, L.* Adversarial Environment Generation.</p>
+            <p>Kopparapu, K.*, Lin, E.*, & Liu, L.* <br> 
+               Adversarial Environment Generation.</p>
             [
             <a href="https://kavyakvk.github.io/adversarial-environment-generation/">Overview</a> /
             <a href="https://github.com/kavyakvk/adversarial-environment-generation/blob/main/Adversarial%20Environment%20Generation%20for%20Multi-Agent%20Evaluation.pdf">Paper</a> /
@@ -18,14 +19,13 @@
 
         <tr>
           <td style="padding:20px;width:40%;vertical-align:middle">
-            <img src = "https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf" width="300"/>
+            <img src = "{{ site.github.url }}/assets/img/rlpe.png" width="150"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Finkelstein, M., Keren, S., Levy Schlot, N., Liu, L., Kolumbus, Y., Rosenschein, J., Parkes, D. <br>
                Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning, December 2021.</p>
             [
-            <!-- <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a> -->
-            <a href="{{ site.github.url }}/assets/img/rlpe.png">Poster</a>
+            <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
             ]
           </td>
         </tr>
