--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -4,7 +4,7 @@
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
         <tr>
-          <td style="padding:20px;width:40%;vertical-align:middle">
+          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
             <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="100"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="100"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
@@ -18,7 +18,7 @@
         </tr>
 
         <tr>
-          <td style="padding:20px;width:40%;vertical-align:middle">
+          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
             <img src = "{{ site.github.url }}/assets/img/rlpe.png" width="150"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
@@ -31,7 +31,7 @@
         </tr>
 
         <tr>
-          <td style="padding:20px;width:40%;vertical-align:middle">
+          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
             <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="150"/><img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
@@ -43,7 +43,7 @@
         </tr>
 
         <tr>
-          <td style="padding:20px;width:40%;vertical-align:middle">
+          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
             <img src = "{{ site.github.url }}/assets/img/animation_17_v3.gif" width="300"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
