--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,7 +5,7 @@
 
         <tr>
           <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
-            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="100"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="100"/> 
+            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="100"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="120"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Kopparapu, K.*, Lin, E.*, & Liu, L.* <br> 
@@ -49,7 +49,8 @@
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
             [
-            <a href="https://arxiv.org/abs/2104.13399">Paper</a>
+            <a href="https://royalsocietypublishing.org/doi/full/10.1098/rspa.2021.0161#d1e5867">Paper</a> /
+            <a href = "https://arxiv.org/abs/2102.10754"> arXiv </a>
             ]
           </td>
         </tr>
