--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,7 +9,7 @@
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Kopparapu, K.*, Lin, E.*, & Liu, L.* <br> 
-               Adversarial Environment Generation.</p>
+               Adversarial Environment Generation. December 2021.</p>
             [
             <a href="https://kavyakvk.github.io/adversarial-environment-generation/">Overview</a> /
             <a href="https://github.com/kavyakvk/adversarial-environment-generation/blob/main/Adversarial%20Environment%20Generation%20for%20Multi-Agent%20Evaluation.pdf">Paper</a> /
@@ -35,9 +35,10 @@
             <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="150"/><img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.</p>
+            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Quasicrystal kirigami. Physical Review Research, 4(3), 033114, 2022.</p>
+            <p>Editor's Suggestion.</p>
             [
-            <a href="https://arxiv.org/abs/2104.13399">Paper</a> /
+            <a href="https://doi.org/10.1103/PhysRevResearch.4.033114">Paper</a> /
             <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
           </td>
         </tr>
@@ -49,8 +50,7 @@
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
             [
-            <a href="https://royalsocietypublishing.org/doi/full/10.1098/rspa.2021.0161#d1e5867">Paper</a> /
-            <a href = "https://arxiv.org/abs/2102.10754"> arXiv </a>
+            <a href="https://royalsocietypublishing.org/doi/full/10.1098/rspa.2021.0161#d1e5867">Paper</a>
             ]
           </td>
         </tr>
