--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,7 +5,20 @@
 
         <tr>
           <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
-            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="120"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="120"/> 
+            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="150"/><img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
+          </td>
+          <td style="padding:20px;width:60%;vertical-align:middle">
+            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Quasicrystal kirigami. Physical Review Research, 4(3), 033114, 2022.</p>
+            <p><i>Editor's Suggestion.</i></p>
+            [
+            <a href="https://doi.org/10.1103/PhysRevResearch.4.033114">Paper</a> /
+            <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
+            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="120"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="100"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Kopparapu, K.*, Lin, E.*, & Liu, L.* <br> 
@@ -27,19 +40,6 @@
             [
             <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
             ]
-          </td>
-        </tr>
-
-        <tr>
-          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
-            <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="150"/><img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
-          </td>
-          <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Quasicrystal kirigami. Physical Review Research, 4(3), 033114, 2022.</p>
-            <p>Editor's Suggestion.</p>
-            [
-            <a href="https://doi.org/10.1103/PhysRevResearch.4.033114">Paper</a> /
-            <a href="https://github.com/lliu12/kirigami_sim">Code</a> ]
           </td>
         </tr>
 
