--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,10 +5,38 @@
 
         <tr>
           <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
+            <img src = "https://github.com/lliu12/percolation_sim/blob/main/explosive_kirigami.png?raw=true" width="150"/><img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
+          </td>
+          <td style="padding:20px;width:60%;vertical-align:middle">
+            <p>Choi, G., Liu, L., & Mahadevan, L. <br>
+              Explosive rigidity percolation in kirigami. Submitted, arXiv:2211.15073.</p>
+            [
+            <a href="https://arxiv.org/abs/2211.15073">Paper</a> /
+            <a href="https://github.com/lliu12/percolation_sim">Code</a> ]
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
+            <img src = "{{ site.github.url }}/assets/img/rlpe.png" width="150"/>
+          </td>
+          <td style="padding:20px;width:60%;vertical-align:middle">
+            <p>Finkelstein, M., Liu, L., Levy Schlot, N.,  Kolumbus, Y., Parkes, D., Rosenschein, J., & Keren, S. <br>
+              Explainable Reinforcement Learning via Model Transforms. NeurIPS, 2022.</p>
+            [
+            <a href="https://arxiv.org/abs/2209.12006">Paper</a> /
+            <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
+            ]
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
             <img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_expansion.gif?raw=true" width="150"/><img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Quasicrystal kirigami. Physical Review Research, 4(3), 033114, 2022.</p>
+            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. <br>
+              Quasicrystal kirigami. Physical Review Research, 4(3), 033114, 2022.</p>
             <p><i>Editor's Suggestion.</i></p>
             [
             <a href="https://doi.org/10.1103/PhysRevResearch.4.033114">Paper</a> /
@@ -16,9 +44,9 @@
           </td>
         </tr>
 
-        <tr>
+        <!-- <tr>
           <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
-            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="120"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="100"/> 
+            <img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/environment_screenshot_example.png?raw=true" width="120"/><img src = "https://raw.githubusercontent.com/kavyakvk/adversarial-environment-generation/pages/media/SwarmAgent_defaults_elite_evolution.gif?raw=true" width="110"/> 
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Kopparapu, K.*, Lin, E.*, & Liu, L.* <br> 
@@ -28,8 +56,8 @@
             <a href="https://github.com/kavyakvk/adversarial-environment-generation/blob/main/Adversarial%20Environment%20Generation%20for%20Multi-Agent%20Evaluation.pdf">Paper</a> /
             <a href="https://github.com/kavyakvk/adversarial-environment-generation">Code</a> ]
           </td>
-        </tr>
-
+        </tr> -->
+<!-- 
         <tr>
           <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
             <img src = "{{ site.github.url }}/assets/img/rlpe.png" width="150"/>
@@ -41,14 +69,15 @@
             <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
             ]
           </td>
-        </tr>
+        </tr> -->
 
         <tr>
           <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
             <img src = "{{ site.github.url }}/assets/img/animation_17_v3.gif" width="300"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
+            <p>Liu, L.*, Choi, G.*, & Mahadevan, L. <br>
+              Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
             [
             <a href="https://royalsocietypublishing.org/doi/full/10.1098/rspa.2021.0161#d1e5867">Paper</a>
             ]
