--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,7 +5,7 @@
 
         <tr>
           <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
-            <img src = "https://github.com/lliu12/percolation_sim/blob/main/explosive_kirigami.png?raw=true" width="150"/><img src = "https://github.com/lliu12/kirigami_sim/blob/master/media/penrose_hamiltonian.gif?raw=true" width="150"/> 
+            <img src = "https://github.com/lliu12/percolation_sim/blob/main/explosive_kirigami.png?raw=true" width="250"/>
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Choi, G., Liu, L., & Mahadevan, L. <br>
