--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,7 +9,8 @@
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Choi, G., Liu, L., & Mahadevan, L. <br>
-              Explosive rigidity percolation in kirigami. Submitted, arXiv:2211.15073.</p>
+              Explosive rigidity percolation in kirigami. <br>
+              To appear in Proceedings of the Royal Society A, arXiv:2211.15073.</p>
             [
             <a href="https://arxiv.org/abs/2211.15073">Paper</a> /
             <a href="https://github.com/lliu12/percolation_sim">Code</a> ]
@@ -22,7 +23,8 @@
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Finkelstein, M., Liu, L., Levy Schlot, N.,  Kolumbus, Y., Parkes, D., Rosenschein, J., & Keren, S. <br>
-              Explainable Reinforcement Learning via Model Transforms. NeurIPS, 2022.</p>
+              Explainable Reinforcement Learning via Model Transforms. <br>
+              NeurIPS, 2022.</p>
             [
             <a href="https://arxiv.org/abs/2209.12006">Paper</a> /
             <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
@@ -36,7 +38,8 @@
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L.*, Choi, G.*, & Mahadevan, L. <br>
-              Quasicrystal kirigami. Physical Review Research, 4(3), 033114, 2022.</p>
+              Quasicrystal kirigami. <br>
+              Physical Review Research, 4(3), 033114, 2022.</p>
             <p><i>Editor's Suggestion.</i></p>
             [
             <a href="https://doi.org/10.1103/PhysRevResearch.4.033114">Paper</a> /
@@ -57,19 +60,6 @@
             <a href="https://github.com/kavyakvk/adversarial-environment-generation">Code</a> ]
           </td>
         </tr> -->
-<!-- 
-        <tr>
-          <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
-            <img src = "{{ site.github.url }}/assets/img/rlpe.png" width="150"/>
-          </td>
-          <td style="padding:20px;width:60%;vertical-align:middle">
-            <p>Finkelstein, M., Keren, S., Levy Schlot, N., Liu, L., Kolumbus, Y., Rosenschein, J., Parkes, D. <br>
-               Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning, December 2021.</p>
-            [
-            <a href="https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf">Poster</a>
-            ]
-          </td>
-        </tr> -->
 
         <tr>
           <td style="padding:20px;width:40%;text-align:center;vertical-align:middle">
@@ -77,7 +67,8 @@
           </td>
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Liu, L.*, Choi, G.*, & Mahadevan, L. <br>
-              Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
+              Wallpaper group kirigami. <br>
+              Proceedings of the Royal Society A. 477, 20210161, 2021.</p>
             [
             <a href="https://royalsocietypublishing.org/doi/full/10.1098/rspa.2021.0161#d1e5867">Paper</a>
             ]
@@ -93,10 +84,6 @@
   </div>
 </div>
 
-
-<div>
-  <a href="https://github.com/LeNPaul/academic">Site template by Paul Le.</a>
-</div>
 
 
 <!-- <div class="row g-5 mb-5">
