--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-6">
-    <h3 class="fw-bold">Hello!</h3>
+    <!-- <h3 class="fw-bold">Hello!</h3> -->
     {{ content }}
   </div>
   <div class="col-md-6">
@@ -14,6 +14,8 @@ layout: default
 
 {% include publications.html %}
 
+{% include writing.html %}
+
 <!-- <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold border-bottom pb-3 mb-5">Updates</h3>
@@ -22,3 +24,7 @@ layout: default
     {% endfor %}
   </div>
 </div> -->
+
+<div>
+  <a href="https://github.com/LeNPaul/academic">Site template by Paul Le.</a>
+</div>
