--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -10,7 +10,7 @@
           <td style="padding:20px;width:60%;vertical-align:middle">
             <p>Choi, G., Liu, L., & Mahadevan, L. <br>
               Explosive rigidity percolation in kirigami. <br>
-              To appear in Proceedings of the Royal Society A, arXiv:2211.15073.</p>
+              To appear, Proceedings of the Royal Society A.</p>
             [
             <a href="https://arxiv.org/abs/2211.15073">Paper</a> /
             <a href="https://github.com/lliu12/percolation_sim">Code</a> ]
