--- a/_includes/writing.html
+++ b/_includes/writing.html
@@ -1,6 +1,6 @@
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Research</h3>
+    <h3 class="fw-bold border-bottom pb-3 mb-5">Writing</h3>
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
         <tr>
@@ -20,16 +20,6 @@
   </table>
   </div>
 </div>
-
-<div>
-  
-</div>
-
-
-<div>
-  <a href="https://github.com/LeNPaul/academic">Site template by Paul Le.</a>
-</div>
-
 
 <!-- <div class="row g-5 mb-5">
   <div>
